--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1054,7 +1054,8 @@ section {
   transition: all 0.3s ease-in-out;
 }
 
-.contact .info h4 {
+.contact .info h4,
+.contact .info div.h4 {
   padding: 0 60px 0 0;
   font-size: 22px;
   font-weight: 600;
